[package]
name = "cosmiccomics"
version = "3.0.0"
description = "Server based Books (Comics and Manga) Reader"
authors = ["Nytuo"]
edition = "2021"


[lib]
name = "cosmiccomics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "2", features = ["kv-surrealkv"] }
chrono = "0.4.41"
md5 = "0.8.0"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies", "stream"] }
url = "2"
bytes = "1"
urlencoding = "2.1.3"
anyhow = "1.0.99"
image = "0.25"
candle-onnx = { version = "0.8", optional = true }
ndarray = "0.15"
lazy_static = "1"
zip = "2.2.2"
headless_chrome = { version = "1.0.5", features = ["fetch"] }
once_cell = "1.20.0"
pdfium-render = "0.8"
regex = "1.11.1"
rand = { version = "0.9.2", features = ["alloc"] }
futures = "0.3.31"
flate2 = "1"
tar = "0.4"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
unrar = "=0.5.8"
scraper = "0.22"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", optional = true, features = ["metal", "accelerate"] }
candle-nn = { version = "0.8", optional = true, features = ["metal", "accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["ai"]
ai = ["candle-core", "candle-nn", "candle-onnx"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
